# v5gdb

./: .gdbinit  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: depot.yml  rust.yml
cli/: Cargo.toml
examples/: basic.rs  motor-stop.rs
ffi/: .clang-format  Cargo.toml  README.md  cbindgen.toml  v5gdb.h
ffi/src/: lib.rs  log.rs  panic.rs
multiplex/: Cargo.toml
multiplex/src/: lib.rs
src/: cache.rs  debugger.rs  exception.rs  exceptions.rs  lib.rs  motors.rs  overlay.S  regs.rs  transport.rs
src/cpu/: cache.rs  debug.rs  exception.rs  instruction.rs  mod.rs  vmsa.rs
src/debugger/: mod.rs  sdk.rs
src/exceptions/: mod.rs  overlay.S
src/gdb_target/: arch.rs  breakpoint.rs  memory.rs  mod.rs  monitor.rs  resume.rs  single_register_access.rs  thread.rs
src/gdb_target/arch/: hw.rs  memory_map.xml  mod.rs
src/gdb_target/breakpoint/: hardware.rs  mod.rs  software.rs
src/regs/: debug.rs  mem.rs  mod.rs
src/sdk/: competition.rs  mod.rs  sdk_trampoline.S
src/sys/: bare.rs  mod.rs
src/sys/freertos/: api.rs  mod.rs  rtos.rs
src/transport/: mod.rs  mux.rs  mux_overlay.rs
tests/: hardware.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
