[package]
name = "v5gdb-ffi"
version = "0.0.1" # Update in root Cargo.toml instead
edition = "2024"
publish = false

[lib]
name = "v5gdb"
crate-type = ["staticlib"]

[dependencies]
v5gdb = { path = "../", default-features = false }
gdbstub.workspace = true
spin.workspace = true
vex-sdk.workspace = true
log = "0.4.29"
owo-colors.workspace = true
