[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
clap = { version = "4.5.54", features = ["derive"] }
fs_extra = "1.3.0"
indicatif = "0.18.3"
nix = { version = "0.30.1", features = ["signal"] }
serde_json = "1.0.149"
toml = "1.1.2"
